--- a/billlist/css/bill_detail.css
+++ b/billlist/css/bill_detail.css
@@ -880,8 +880,9 @@
 
 .fontheadsize{
     font-family: Inter;
-    font-size: 14px;
+    font-size: 12px;
     color: black;
+    margin-top: 0px;
 }
 
 .fontdatasize{
@@ -985,10 +986,9 @@ label {
 
 .datenumber {
     display: grid;
-    grid-template-columns: 1fr 2fr;
+    grid-template-columns: 0.3fr 2fr;
     column-gap: 15px;
     /* row-gap: 20px; */
-    align-items: center;
 }
 .tablebackbtn{
   display: flex;
@@ -1025,5 +1025,80 @@ label {
 
 .nv{
   width: fit-content;
+}
+
+
+.sponsors table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+.sponsors thead th {
+  position: sticky;
+  top: 0;
+  background-color: #fff; /* Background color to keep the header visible */
+}
+
+.sponsors tbody {
+  display: block;
+  max-height: 200px; /* Adjust height as needed */
+  overflow-y: auto;
+}
+
+/* Custom scrollbar styling for WebKit browsers */
+.sponsors tbody::-webkit-scrollbar {
+  width: 8px;
+}
+
+.sponsors tbody::-webkit-scrollbar-track {
+  background: #eff6ff;
+}
+
+.sponsors tbody::-webkit-scrollbar-thumb {
+  background-color: #b9cce5;
+  border-radius: 19px;
+}
+
+.sponsors tbody tr {
+  display: table;
+  width: 100%;
+  table-layout: fixed; /* Ensures proper column alignment */
+}
+
+.action table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+.action thead th {
+  position: sticky;
+  top: 0;
+  background-color: #fff; /* Keeps header background white */
+}
+
+.action tbody {
+  display: block;
+  max-height: 200px; /* Adjust height as needed */
+  overflow-y: auto;
+}
+
+/* Custom scrollbar styling for WebKit browsers */
+.action tbody::-webkit-scrollbar {
+  width: 8px;
+}
+
+.action tbody::-webkit-scrollbar-track {
+  background: #eff6ff;
+}
+
+.action tbody::-webkit-scrollbar-thumb {
+  background-color: #b9cce5;
+  border-radius: 19px;
+}
+
+.action tbody tr {
+  display: table;
+  width: 100%;
+  table-layout: fixed; /* Ensures columns align properly */
 }
 
