--- a/billlist/css/bill_detail.css
+++ b/billlist/css/bill_detail.css
@@ -760,6 +760,7 @@
   letter-spacing: -0.28px;
   border: none;
   padding: 16px 0px 15px;
+  vertical-align: top;
 }
 
 .bill-table-wrapper .table-scroll {
